# SentryInsight

./: .env.example  .gitignore  EFFICIENCY_REPORT.md  README.md  actors.json  analyze.py  config.json  config.yaml  entities.py  fetch.py  index.html  index.md  main.py  malware.json  mcp_workflow.py  podcast.xml  pyproject.toml  requirements.txt  sitemap.xml  workflow.py
.github/codex/prompts/: review.md
.github/workflows/: exploitation-analysis.yml  generate-report.yml
config/: config.json  ui.json
docs/: _config.yml  actors.json  index.html  index.md  malware.json  navigation.md  podcast.xml
docs/reports/: index.html
scripts/: generate_audio_assets.py  local_validation.sh  validate_report.py
src/core/: analyze.py  entities.py  model_client.py  model_config.py  opencode_client.py  openrouter_client.py  report_validation.py  source_attribution.py  tools.py  workflow.py
src/services/: audio.py  fetch.py  publish.py  rss_mcp.py  virustotal.py
templates/: exploitation-report.md  exploitation_report.md
tests/: test_analyze_guards.py  test_audio_summary.py  test_feed_client.py  test_feed_client_boundary.py  test_main_exit.py  test_model_client.py  test_model_config.py  test_opencode_client.py  test_openrouter_client.py  test_publish_guards.py  test_report_validation.py  test_report_viewer_security.py  test_source_attribution.py  test_validate_report_cli.py  test_validation_gate_contract.py  test_workflow_guards.py
tests/fixtures/: source_attribution_report.md
